--- a/public/coaching.html
+++ b/public/coaching.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
-    <body>
+    <body class="coaching">
       <section class="header green">
         <div class="container">
           <div class="row">
@@ -67,17 +67,10 @@
           <span class="spacer"></span>
 
           <h3 class="center-txt">Who this isn’t for</h3>
-          <ul class="clearfix">
-            <li>Space Aliens</li>
-            <li>Robots</li>
-            <li>Businesses that don’t want more money</li>
-            <li>Space Aliens</li>
-            <li>Robots</li>
-            <li>Businesses that don’t want more money</li>
-          </ul>
+          <p>If your team has a good handle implementing results-based, highly targeted marketing that’s driving positive results, than this workshop may not be a good fit. With that being said, our team works with many large and small organizations to help implement marketing strategies, build and test proof of concept prototypes for product ideas, and lots of other thoughtful design and marketing related projects.</p>
 
           <button>
-            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/ebrusven');return false;">SCHEDULE WORKSHOP</a>
+            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch');return false;">SCHEDULE WORKSHOP</a>
           </button>
           <p class="center-txt">WORKSHOP FEE $1,000</p>
         </div>
@@ -103,18 +96,14 @@
           <img class="cirle" src="./img/jason.png" alt="Jason Rysavy" />
           <h2 class="center-txt">Jason Rysavy</h2>
           <h3 class="center-txt">Workshop facilitator / Marketing Coach</h3>
-          <p>Something about Jason…. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis dictum nisl et gravida. Nulla facilisi. In in convallis turpis. Quisque volutpat viverra eros, euismod hendrerit ipsum aliquam eu. Curabitur at placerat quam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur vitae est elit. Praesent at magna ullamcorper, dignissim libero id, ornare orci. Mauris et ante at elit placerat lobortis. Pellentesque porta ante eget sollicitudin fringilla.</p>
           <ul class="clearfix">
-            <li>Space Aliens</li>
-            <li>Robots</li>
-            <li>Businesses that don’t want more money</li>
-            <li>Space Aliens</li>
-            <li>Robots</li>
-            <li>Businesses that don’t want more money</li>
+            <li>Founded and ran a strategic digital design and marketing agency for 14 years before being acquired in 2013</li>
+            <li>Led the marketing and served on the management team for a marketing analytics SaaS company, gaining a deep understanding of data-centric marketing</li>
+            <li>Continually implementing and managing marketing strategies to help grow small businesses</li>
           </ul>
 
           <button>
-            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/ebrusven');return false;">MEET JASON</a>
+            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch');return false;">SCHEDULE WORKSHOP</a>
           </button>
           <p class="center-txt">SCHEDULE A WORKSHOP $1,000</p>
         </div>
@@ -151,7 +140,7 @@
                 <div class="d-flex h-100 align-items-center justify-content-center">
                   <div>
                     <h3>We’re launching a new line of business in the B2B space and were not familiar with marketing strategies in this space. After the session with Jason at Ditch, our team walked away with smart, actionable ideas for digital marketing to target the audience we need to reach. With our limited marketing budget, we have to think strategically. We’ve already implemented many of them and seen results from these efforts.</h3>
-                    <p>- By someone who cares</p>
+                    <p>- Lutheran Social Services Financial Advocacy</p>
                   </div>
                 </div>
               </div>
@@ -162,20 +151,20 @@
 
       <section>
         <div class="container center-txt">
-          <h3>Just send me an email</h3>
+          <h3>Questions? Shoot me an email.</h3>
           <h3><a href="mailto:jason@madebyditch.com">jason@madebyditch.com</a></h3>
           <button>
-            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/ebrusven');return false;">SCHEDULE WORKSHOP</a>
+            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch');return false;">SCHEDULE WORKSHOP</a>
           </button>
           <p>WORKSHOP FEE $1,000</p>
         </div>
       </section>
 
-      <footer>
+      <footer class="clearfix">
         <div class="container">
-          <img src="" alt="Made by Ditch" />
+          <img src="./img/ditch.svg" alt="Made by Ditch" />
           <p>400 First Avenue North  Suite 535 Minneapolis, MN 55401 </p>
-          <p>612 355-4300</p>
+          <p class="phone">612.355.4300</p>
         </div>
       </footer>
 
@@ -191,10 +180,14 @@
         <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
 
+        <!-- Start of HubSpot Embed Code -->
+        <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/4385206.js"></script>
+        <!-- End of HubSpot Embed Code -->
+
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
             window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+            ga('create','UA-107708950-4','auto');ga('send','pageview')
         </script>
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
