--- a/public/index.html
+++ b/public/index.html
@@ -11,26 +11,119 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
+      <section class="full-carousel">
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="full-slide transitionall">
+          <div class="container">
+            <div class="row">
+              <div class="col align-self-center clearfix">
+              <div class="clearfix">
+                <h2>Hi, We're Ditch</h2>
+                <div class="transitionall saying active">
+                  <h1>The Foundry Publishing asked us for a modern ecommerce solution to grow into new markets.</h1>
+                </div>
+                <div class="transitionall saying">
+                  <h1>White Crane Construction asked us to help them get more leads.</h1>
+                </div>
+                <div class="transitionall saying">
+                  <h1>Verata Analytics asked us to prototype, test, and launch their new healthcare tool.</h1>
+                </div>
+                <div class="transitionall saying">
+                  <h1>Long Island Wine Council asked us to increase awareness for their events.</h1>
+                </div>
+                <div class="transitionall saying">
+                  <h1>Second Harvest Heartland asked us to prototype and user-test a solution to help families earn rebates.</h1>
+                </div>
+                <div class="transitionall saying">
+                  <h1>Konverge asked us to improve the UX & create a launch strategy for their new app.</h1>
+                </div>
+                <div class="transitionall saying">
+                  <h1>Blue Cross SC asked us to define a re-launch strategy for their corporate website.</h1>
+                </div>
+              </div>
+              <h4 class="clearfix"><a href="mailto:jason@madebyditch.com" class="transitionall">How can we help you?</a></h4>
+              <div class="col align-self-center clearfix">
+            </div>
+          </div>
+        </div>
+
+        <!-- <div class="full-slide transitionall">
+          <div class="container">
+            <div class="row">
+              <div class="col align-self-center">
+                <h2>Hi, We're Ditch</h2>
+                <h1>We helped White Crane Construction generate the right leads.</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="full-slide transitionall">
+          <div class="container">
+            <div class="row">
+              <div class="col align-self-center">
+                <h2>Hi, We're Ditch</h2>
+                <h1>We helped Second Harvest Heartland design an app to save money.</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="full-slide transitionall">
+          <div class="container">
+            <div class="row">
+              <div class="col align-self-center">
+                <h2>Hi, We're Ditch</h2>
+                <h1>We helped The Foundry architect a modern e-commerce solution.</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="full-slide transitionall">
+          <div class="container">
+            <div class="row">
+              <div class="col align-self-center">
+                <h2>Hi, We're Ditch</h2>
+                <h1>We helped Advertising Agencies build better web products.</h1>
+              </div>
+            </div>
+          </div> -->
+        </div>
+
+      </section>
+
+        <footer class="fixed">
+          <div class="container">
+            <img src="./img/ditch.svg" alt="Made by Ditch" />
+            <p>400 First Avenue North  Suite 535 Minneapolis, MN 55401 </p>
+            <p class="phone">612.355.4300</p>
+          </div>
+        </footer>
+
+
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+
+        <!-- Start of HubSpot Embed Code -->
+        <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/4385206.js"></script>
+        <!-- End of HubSpot Embed Code -->
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
             window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+            ga('create','UA-107708950-4','auto');ga('send','pageview')
         </script>
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
