--- a/coaching.html
+++ b/coaching.html
@@ -20,7 +20,7 @@
         <div class="container">
           <div class="row">
             <div class="col align-self-center center-txt">
-              <h4>3 Hour strategic marketing workshop</h4>
+              <h4>3 Hour Strategic Marketing Workshop</h4>
               <p class="italic">customized for your business</p>
               <h1>Find & connect with your audience. Improve your business.</h1>
               <p>WORKSHOP DETAILS</p>
@@ -95,7 +95,7 @@
         <div class="container">
           <img class="cirle" src="./img/jason.png" alt="Jason Rysavy" />
           <h2 class="center-txt">Jason Rysavy</h2>
-          <h3 class="center-txt">Workshop facilitator / Marketing Coach</h3>
+          <h3 class="center-txt">Workshop Facilitator / Marketing Coach</h3>
           <ul class="clearfix">
             <li>Founded and ran a strategic digital design and marketing agency for 14 years before being acquired in 2013</li>
             <li>Led the marketing and served on the management team for a marketing analytics SaaS company, gaining a deep understanding of data-centric marketing</li>
@@ -105,7 +105,7 @@
           <button>
             <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch');return false;">SCHEDULE WORKSHOP</a>
           </button>
-          <p class="center-txt">SCHEDULE A WORKSHOP $1,000</p>
+          <p class="center-txt">WORKSHOP FEE $1,000</p>
         </div>
       </section>
 
