update quote attributes

--- a/coaching.html
+++ b/coaching.html
@@ -120,19 +120,20 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="d-flex h-100 align-items-center justify-content-center">
-                  <div>
-                    <h3>This felt like attending a small digital marketing conference, customized to my business.</h3>
-                    <p>- By someone who cares</p>
-                  </div>
-                </div>
-              </div>
+
               <div class="carousel-item">
                 <div class="d-flex h-100 align-items-center justify-content-center">
                   <div>
                     <h3>Every organization has different needs, and this session got to the root of ours. Learning customized techniques for our team and specific needs was invaluable. We discussed our marketing roadblocks and ways to overcome them, which left us feeling invigorated and ready to execute our new strategies.</h3>
-                    <p>- By someone who cares</p>
+                    <p>- Tracie Fauth, Marketing Specialist, LSS</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item active">
+                <div class="d-flex h-100 align-items-center justify-content-center">
+                  <div>
+                    <h3>This felt like attending a small digital marketing conference, customized to my business.</h3>
+                    <p>- Dry Cleaning Chain</p>
                   </div>
                 </div>
               </div>
