split into columns

--- a/coaching.html
+++ b/coaching.html
@@ -61,14 +61,16 @@
 
       <section class="gray">
         <div class="container">
-          <h2 class="center-txt">Who’s this for?</h2>
-          <p>This workshop is designed for companies with little to no internal marketing support. For some of these companies there might be one or two people “assigned” to marketing. Other times we’re talking directly with the owner. And in the B2B world, we’re often working with the business development and/or sales team.</p>
-
-          <span class="spacer"></span>
-
-          <h2 class="center-txt">Who this isn’t for</h2>
-          <p>If your team has a good handle implementing results-based, highly targeted marketing that’s driving positive results, than this workshop may not be a good fit. With that being said, our team works with many large and small organizations to help implement marketing strategies, build and test proof of concept prototypes for product ideas, and lots of other thoughtful design and marketing related projects.</p>
-
+          <div class="row">
+            <div class="col col-sm-6 col-12">
+                <h2 class="center-txt">Who’s this for?</h2>
+                <p>This workshop is designed for companies with little to no internal marketing support. For some of these companies there might be one or two people “assigned” to marketing. Other times we’re talking directly with the owner. And in the B2B world, we’re often working with the business development and/or sales team.</p>
+              </div>
+              <div class="col col-sm-6 col-12">
+                <h2 class="center-txt">Who this isn’t for</h2>
+                <p>If your team has a good handle implementing results-based, highly targeted marketing that’s driving positive results, than this workshop may not be a good fit. With that being said, our team works with many large and small organizations to help implement marketing strategies, build and test proof of concept prototypes for product ideas, and lots of other thoughtful design and marketing related projects.</p>
+              </div>
+            </div>
           <button>
             <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch');return false;">SCHEDULE WORKSHOP</a>
           </button>
