--- a/coaching.html
+++ b/coaching.html
@@ -63,7 +63,7 @@
         <div class="container">
           <div class="row">
             <div class="col col-sm-6 col-12">
-                <h3>Who’s this for?</h3hidden>
+                <h3>Who’s this for?</h3>
                 <p>This workshop is designed for companies with little to no internal marketing support. For some of these companies there might be one or two people “assigned” to marketing. Other times we’re talking directly with the owner. And in the B2B world, we’re often working with the business development and/or sales team.</p>
               </div>
               <div class="col col-sm-6 col-12">
