--- a/index.html
+++ b/index.html
@@ -1,58 +1,69 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="apple-touch-icon" href="icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-      <section class="full-carousel">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/favicons/site.webmanifest">
+    <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicons/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Made By Ditch">
+    <meta name="application-name" content="Made By Ditch">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+    <section class="full-carousel">
 
         <div class="full-slide transitionall">
-          <div class="container">
-            <div class="row">
-              <div class="col align-self-center clearfix">
-              <div class="clearfix">
-                <h2>Hi, We're Ditch</h2>
-                <div class="transitionall saying active">
-                  <h1>The Foundry Publishing asked us for a modern ecommerce solution to grow into new markets.</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col align-self-center clearfix">
+                        <div class="clearfix">
+                            <h2>Hi, We're Ditch</h2>
+                            <div class="transitionall saying active">
+                                <h1>The Foundry Publishing asked us for a modern ecommerce solution to grow into new markets.</h1>
+                            </div>
+                            <div class="transitionall saying">
+                                <h1>White Crane Construction asked us to help them get more leads.</h1>
+                            </div>
+                            <div class="transitionall saying">
+                                <h1>Verata Analytics asked us to prototype, test, and launch their new healthcare tool.</h1>
+                            </div>
+                            <div class="transitionall saying">
+                                <h1>Long Island Wine Council asked us to increase awareness for their events.</h1>
+                            </div>
+                            <div class="transitionall saying">
+                                <h1>Second Harvest Heartland asked us to prototype and user-test a solution to help families earn rebates.</h1>
+                            </div>
+                            <div class="transitionall saying">
+                                <h1>Konverge asked us to improve the UX & create a launch strategy for their new app.</h1>
+                            </div>
+                            <div class="transitionall saying">
+                                <h1>Blue Cross SC asked us to define a re-launch strategy for their corporate website.</h1>
+                            </div>
+                        </div>
+                        <h4 class="clearfix"><a href="mailto:jason@madebyditch.com" class="transitionall">How can we help you?</a></h4>
+                        <div class="col align-self-center clearfix">
+                        </div>
+                    </div>
                 </div>
-                <div class="transitionall saying">
-                  <h1>White Crane Construction asked us to help them get more leads.</h1>
-                </div>
-                <div class="transitionall saying">
-                  <h1>Verata Analytics asked us to prototype, test, and launch their new healthcare tool.</h1>
-                </div>
-                <div class="transitionall saying">
-                  <h1>Long Island Wine Council asked us to increase awareness for their events.</h1>
-                </div>
-                <div class="transitionall saying">
-                  <h1>Second Harvest Heartland asked us to prototype and user-test a solution to help families earn rebates.</h1>
-                </div>
-                <div class="transitionall saying">
-                  <h1>Konverge asked us to improve the UX & create a launch strategy for their new app.</h1>
-                </div>
-                <div class="transitionall saying">
-                  <h1>Blue Cross SC asked us to define a re-launch strategy for their corporate website.</h1>
-                </div>
-              </div>
-              <h4 class="clearfix"><a href="mailto:jason@madebyditch.com" class="transitionall">How can we help you?</a></h4>
-              <div class="col align-self-center clearfix">
-            </div>
-          </div>
-        </div>
 
-        <!-- <div class="full-slide transitionall">
+                <!-- <div class="full-slide transitionall">
           <div class="container">
             <div class="row">
               <div class="col align-self-center">
@@ -94,37 +105,45 @@
               </div>
             </div>
           </div> -->
-        </div>
+            </div>
 
-      </section>
+    </section>
 
-        <footer class="fixed">
-          <div class="container">
+    <footer class="fixed">
+        <div class="container">
             <img src="./img/ditch.svg" alt="Made by Ditch" />
-            <p>400 First Avenue North  Suite 535 Minneapolis, MN 55401 </p>
+            <p>400 First Avenue North Suite 535 Minneapolis, MN 55401 </p>
             <p class="phone">612.355.4300</p>
-          </div>
-        </footer>
+        </div>
+    </footer>
 
 
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')
+    </script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
 
-        <!-- Start of HubSpot Embed Code -->
-        <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/4385206.js"></script>
-        <!-- End of HubSpot Embed Code -->
+    <!-- Start of HubSpot Embed Code -->
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/4385206.js"></script>
+    <!-- End of HubSpot Embed Code -->
 
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-107708950-4','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-    </body>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+        window.ga = function() {
+            ga.q.push(arguments)
+        };
+        ga.q = [];
+        ga.l = +new Date;
+        ga('create', 'UA-107708950-4', 'auto');
+        ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+</body>
+
 </html>
