fix Jason's calendly

--- a/marketingcoach.html
+++ b/marketingcoach.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <button>
-            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch');return false;">SCHEDULE WORKSHOP</a>
+            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch/3hr/');return false;">SCHEDULE WORKSHOP</a>
           </button>
             <p class="center-txt">WORKSHOP FEE $1,000</p>
         </div>
