--- a/marketingcoach.html
+++ b/marketingcoach.html
@@ -126,7 +126,7 @@
             </ul>
 
             <button>
-            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch');return false;">SCHEDULE WORKSHOP</a>
+            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch/3hr/');return false;">SCHEDULE WORKSHOP</a>
           </button>
             <p class="center-txt">WORKSHOP FEE $1,000</p>
         </div>
@@ -180,7 +180,7 @@
             <h3>Questions? Shoot me an email.</h3>
             <h3><a href="mailto:jason@madebyditch.com">jason@madebyditch.com</a></h3>
             <button>
-            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch');return false;">SCHEDULE WORKSHOP</a>
+            <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch/3hr/');return false;">SCHEDULE WORKSHOP</a>
           </button>
             <p>WORKSHOP FEE $1,000</p>
         </div>
