text updates to quote and bio

--- a/marketingcoach.html
+++ b/marketingcoach.html
@@ -39,7 +39,6 @@
                 <div class="col align-self-center center-txt">
                     <h4>3 Hour Strategic Marketing Workshop</h4>
                     <p class="italic">customized for your business</p>
-
                     <h1>Find & connect with your audience. Improve your business.</h1>
                     <p>WORKSHOP DETAILS</p>
                     <img class="arrow" src="./img/arrow.svg" alt="workshop details" />
@@ -122,8 +121,8 @@
             <h3 class="center-txt">Workshop Facilitator / Marketing Coach</h3>
             <ul class="clearfix">
                 <li>Founded and ran a strategic digital design and marketing agency for 14 years before being acquired in 2013</li>
-                <li>Led the marketing and served on the management team for a marketing analytics SaaS company, gaining a deep understanding of data-centric marketing</li>
-                <li>Continually implementing and managing marketing strategies to help grow small businesses</li>
+                <li>Led the marketing and served on the management team for a B2B marketing analytics SaaS company, gaining a deep understanding of data-centric marketing</li>
+                <li>Continually implementing and managing marketing strategies to help grow small to mid-sized B2B and B2C businesses</li>
             </ul>
 
             <button>
@@ -167,7 +166,7 @@
                             <div>
                                 <h3>We’re launching a new line of business in the B2B space and were not familiar with marketing strategies in this space. After the session with Jason at Ditch, our team walked away with smart, actionable ideas for digital
                                     marketing to target the audience we need to reach. With our limited marketing budget, we have to think strategically. We’ve already implemented many of them and seen results from these efforts.</h3>
-                                <p>- Lutheran Social Services Financial Advocacy</p>
+                                <p>- LSS Financial Services</p>
                             </div>
                         </div>
                     </div>
