--- a/marketingcoach.html
+++ b/marketingcoach.html
@@ -40,8 +40,8 @@
                     <h4>3 Hour Strategic Marketing Workshop</h4>
                     <p class="italic">customized for your business</p>
                     <h1>Find & connect with your audience. Improve your business.</h1>
-                    <p>WORKSHOP DETAILS</p>
-                    <img class="arrow" src="./img/arrow.svg" alt="workshop details" />
+                    <!-- <p>WORKSHOP DETAILS</p>
+                    <img class="arrow" src="./img/arrow.svg" alt="workshop details" /> -->
                 </div>
             </div>
         </div>
