Ridiculous Titles and Meta data

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>Minneapolis Digital Thinkers and Makers Helping Small to Mid-Sized Businesses Win</title>
+    <meta name="description" content="Small, scrappy team making stuff and then making that stuff work with highly targeted marketing.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="manifest" href="site.webmanifest">
