--- a/marketingcoach.html
+++ b/marketingcoach.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>Marketing Coach - Best Practices Workshop for B2B and B2C</title>
+    <meta name="description" content="A marketing best practice workshop, customized for your business. Ideal for companies with little to no marketing support and looking for recommendations on where to get started.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700" rel="stylesheet">
     <link rel="manifest" href="site.webmanifest">
