--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Minneapolis Digital Thinkers and Makers Helping Small to Mid-Sized Businesses Win</title>
+    <title>Ditch - Digital Thinkers and Makers in Minneapolis Helping Small to Mid-Sized Businesses Win</title>
     <meta name="description" content="Small, scrappy team making stuff and then making that stuff work with highly targeted marketing.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
