new footer text

--- a/marketingcoach.html
+++ b/marketingcoach.html
@@ -189,7 +189,7 @@
     <footer class="clearfix">
         <div class="container">
             <img src="./img/ditch.svg" alt="Made by Ditch" />
-            <p>400 First Avenue North Suite 535 Minneapolis, MN 55401 </p>
+            <p>400 First Avenue North - Suite 535 Minneapolis, MN 55401 </p>
             <p class="phone">612.355.4300</p>
         </div>
     </footer>
