--- a/marketingcoach.html
+++ b/marketingcoach.html
@@ -85,7 +85,7 @@
                         B2B world, we’re often working with the business development and/or sales team.</p>
                 </div>
                 <div class="col col-sm-6 col-12">
-                    <h3>Who this isn’t for</h3>
+                    <h3>Who this isn’t for:</h3>
                     <p>If your team has a good handle implementing results-based, highly targeted marketing that’s driving positive results, than this workshop may not be a good fit. With that being said, our team works with many large and small organizations
                         to help implement marketing strategies, build and test proof of concept prototypes for product ideas, and lots of other thoughtful design and marketing related projects.</p>
                 </div>
