updating with curious name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Ditch - Digital Thinkers and Makers in Minneapolis Helping Small to Mid-Sized Businesses Win</title>
+    <title>Curious - Digital Thinkers and Makers in Minneapolis Helping Small to Mid-Sized Businesses Win</title>
     <meta name="description" content="Small, scrappy team making stuff and then making that stuff work with highly targeted marketing.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="col align-self-center clearfix">
                         <div class="clearfix">
-                            <h2>Hi, We're Ditch</h2>
+                            <h2>Hi, We're Curious</h2>
                             <div class="transitionall saying active">
                                 <h1>The Foundry Publishing asked us for a modern ecommerce solution to grow into new markets.</h1>
                             </div>
@@ -51,7 +51,7 @@
                                 <h1>Second Harvest Heartland asked us to prototype and user-test a solution to help families earn rebates.</h1>
                             </div>
                             <div class="transitionall saying">
-                                <h1>Konverge asked us to improve the UX & create a launch strategy for their new app.</h1>
+                                <h1>Konverge asked us to improve the UX &amp; create a launch strategy for their new app.</h1>
                             </div>
                             <div class="transitionall saying">
                                 <h1>Blue Cross SC asked us to define a re-launch strategy for their corporate website.</h1>
@@ -62,57 +62,14 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- <div class="full-slide transitionall">
-          <div class="container">
-            <div class="row">
-              <div class="col align-self-center">
-                <h2>Hi, We're Ditch</h2>
-                <h1>We helped White Crane Construction generate the right leads.</h1>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="full-slide transitionall">
-          <div class="container">
-            <div class="row">
-              <div class="col align-self-center">
-                <h2>Hi, We're Ditch</h2>
-                <h1>We helped Second Harvest Heartland design an app to save money.</h1>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="full-slide transitionall">
-          <div class="container">
-            <div class="row">
-              <div class="col align-self-center">
-                <h2>Hi, We're Ditch</h2>
-                <h1>We helped The Foundry architect a modern e-commerce solution.</h1>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="full-slide transitionall">
-          <div class="container">
-            <div class="row">
-              <div class="col align-self-center">
-                <h2>Hi, We're Ditch</h2>
-                <h1>We helped Advertising Agencies build better web products.</h1>
-              </div>
-            </div>
-          </div> -->
             </div>
 
     </section>
 
     <footer class="fixed">
         <div class="container">
-            <img src="./img/ditch.svg" alt="Made by Ditch" />
-            <p>400 First Avenue North Suite 535 Minneapolis, MN 55401 </p>
+            <img src="./img/curious_logo.svg" alt="Curious" />
+            <p>400 First Avenue North Suite 515 Minneapolis, MN 55401 </p>
             <p class="phone">612.355.4300</p>
         </div>
     </footer>
