new address and contact info

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <h1>Blue Cross SC asked us to define a re-launch strategy for their corporate website.</h1>
                             </div>
                         </div>
-                        <h4 class="clearfix"><a href="mailto:jason@madebyditch.com" class="transitionall">How can we help you?</a></h4>
+                        <h4 class="clearfix"><a href="mailto:jason@discovercurious.com" class="transitionall">How can we help you?</a></h4>
                         <div class="col align-self-center clearfix">
                         </div>
                     </div>
@@ -69,8 +69,8 @@
     <footer class="fixed">
         <div class="container">
             <img src="./img/curious_logo.svg" alt="Curious" />
-            <p>400 First Avenue North Suite 515 Minneapolis, MN 55401 </p>
-            <p class="phone">612.355.4300</p>
+            <p>227 Colfax Ave. N Suite 220, Minneapolis MN 55405 </p>
+            <p class="phone">952.994.7625</p>
         </div>
     </footer>
 
