--- a/marketingcoach.html
+++ b/marketingcoach.html
@@ -178,7 +178,7 @@
     <section>
         <div class="container center-txt">
             <h3>Questions? Shoot me an email.</h3>
-            <h3><a href="mailto:jason@madebyditch.com">jason@madebyditch.com</a></h3>
+            <h3><a href="mailto:jason@discovercurious.com">jason@discovercurious.com</a></h3>
             <button>
             <a href="" class="button" onclick="Calendly.showPopupWidget('https://calendly.com/jasonatditch/3hr/');return false;">SCHEDULE WORKSHOP</a>
           </button>
@@ -188,9 +188,9 @@
 
     <footer class="clearfix">
         <div class="container">
-            <img src="./img/ditch.svg" alt="Made by Ditch" />
-            <p>400 First Avenue North - Suite 535 Minneapolis, MN 55401 </p>
-            <p class="phone">612.355.4300</p>
+            <img src="./img/curious_logo.svg" alt="Curious" />
+            <p>227 Colfax Ave. N Suite 220, Minneapolis MN 55405 </p>
+            <p class="phone">952.994.7625</p>
         </div>
     </footer>
 
