--- a/uxofficehours.html
+++ b/uxofficehours.html
@@ -188,9 +188,9 @@
 
     <footer class="clearfix">
         <div class="container">
-            <img src="./img/ditch.svg" alt="Made by Ditch" />
-            <p>400 First Avenue North - Suite 535 Minneapolis, MN 55401 </p>
-            <p class="phone">612.355.4300</p>
+            <img src="./img/curious_logo.svg" alt="Curious" />
+            <p>227 Colfax Ave. N Suite 220, Minneapolis MN 55405 </p>
+            <p class="phone">952.994.7625</p>
         </div>
     </footer>
 
