--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                             <div class="transitionall saying">
                                 <h1>White Crane Construction asked us to help them get more leads.</h1>
                             </div>
-                            <div class="transitionall saying">
+                            <!-- <div class="transitionall saying">
                                 <h1>Verata Analytics asked us to prototype, test, and launch their new healthcare tool.</h1>
-                            </div>
+                            </div> -->
                             <div class="transitionall saying">
                                 <h1>Long Island Wine Council asked us to increase awareness for their events.</h1>
                             </div>
