--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
     <meta name="description" content="Small, scrappy team making stuff and then making that stuff work with highly targeted marketing.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-    <link rel="manifest" href="favicons/site.webmanifest">
-    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="favicons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="Made By Ditch">
-    <meta name="application-name" content="Made By Ditch">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png?v=YAm3EL6XER">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png?v=YAm3EL6XER">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png?v=YAm3EL6XER">
+    <link rel="manifest" href="/favicons/site.webmanifest?v=YAm3EL6XER">
+    <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg?v=YAm3EL6XER" color="#ce953b">
+    <link rel="shortcut icon" href="/favicons/favicon.ico?v=YAm3EL6XER">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="favicons/browserconfig.xml">
+    <meta name="msapplication-config" content="/favicons/browserconfig.xml?v=YAm3EL6XER">
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
@@ -69,7 +66,7 @@
     <footer class="fixed">
         <div class="container">
             <img src="./img/curious_logo.svg" alt="Curious" />
-            <p>227 Colfax Ave. N Suite 220, Minneapolis MN 55405 </p>
+            <p>807 Broadway St NE, Suite 140, Minneapolis, MN 55413 </p>
             <p class="phone">952.994.7625</p>
         </div>
     </footer>
