--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="spacer flex-wrap">
             <div class="left">
                 <h2>Say hello</h2>
-                <p>Do you have a project for us or just want to chat? (We love meeting new people). Please get in-touch.</p>
+                <p>Do you have a project for us or just want to chat? (We love meeting new people). Please get in touch.</p>
                 <p><a href="mailto:hello@discovercurious.com">hello@discovercurious.com</a>
                     <br /><a href="tel:+952.994.7625">952.994.7625</a>
                     <br />807 Broadway St NE,
